Add leader and partner page APIs
